NPE fix test added deps updated